// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home component Detects when Docker is not installed 1`] = `
<div>
  <nav
    className="mb-5 navbar navbar-dark bg-dark"
  >
    <div
      className="container"
    >
      <a
        className="navbar-brand"
        href="#/"
      >
        <img
          alt="KNOTS logo"
          height={40}
          src="test-file-stub"
          width={40}
        />
      </a>
      <ul
        className="navbar-nav nav-pills"
      >
        <li
          className="nav-item"
        >
          <a
            aria-current="page"
            className="nav-link d-none"
            href="/"
            onClick={[Function]}
            style={Object {}}
          >
            Back to saved knots
          </a>
        </li>
      </ul>
    </div>
  </nav>
  <div
    className="mt-5 container"
  >
    <div>
      <div
        className="alert alert-warning fade"
        role="alert"
      >
        <div
          className="d-flex justify-content-between"
        >
          <p
            className="align-self-center mb-0"
          >
            <strong>
              Where are you, Docker?
            </strong>
              Please make sure that Docker is
             
            installed
             and try again.
            <br />
            <small>
              KNOTS uses 
              <a
                className="alert-link"
                href="#"
                onClick={[Function]}
              >
                Docker
              </a>
               to run pipelines reliably on various operating systems.
            </small>
          </p>
          <div
            className="align-self-center"
          >
            <button
              className="mr-2 btn btn-outline-warning"
              onClick={[Function]}
              type="button"
            >
              Install Docker
            </button>
            <button
              className="btn btn-warning"
              onClick={[Function]}
              type="button"
            >
              Retry
            </button>
          </div>
        </div>
      </div>
      <div
        className="jumbotron"
      >
        <h1
          className="display-4"
        >
          There is 
          <em>
            knothing
          </em>
           here yet.
        </h1>
        <p
          className="lead"
        >
          KNOTS allows you to set up simple data pipelines leveraging
           
          <a
            href="#"
            onClick={[Function]}
          >
            Singer
          </a>
           open-source technology.
        </p>
        <a
          href="/taps"
          onClick={[Function]}
        >
          <button
            className="mt-3 btn btn-primary disabled"
            disabled={true}
            onClick={[Function]}
            type={undefined}
          >
            Get Started
          </button>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Home component Detects when Docker is not running 1`] = `
<div>
  <nav
    className="mb-5 navbar navbar-dark bg-dark"
  >
    <div
      className="container"
    >
      <a
        className="navbar-brand"
        href="#/"
      >
        <img
          alt="KNOTS logo"
          height={40}
          src="test-file-stub"
          width={40}
        />
      </a>
      <ul
        className="navbar-nav nav-pills"
      >
        <li
          className="nav-item"
        >
          <a
            aria-current="page"
            className="nav-link d-none"
            href="/"
            onClick={[Function]}
            style={Object {}}
          >
            Back to saved knots
          </a>
        </li>
      </ul>
    </div>
  </nav>
  <div
    className="mt-5 container"
  >
    <div>
      <div
        className="alert alert-warning fade"
        role="alert"
      >
        <div
          className="d-flex justify-content-between"
        >
          <p
            className="align-self-center mb-0"
          >
            <strong>
              Wake up, Docker!
            </strong>
              Please make sure that Docker is
             
            running
             and try again.
            <br />
            <small>
              KNOTS uses 
              <a
                className="alert-link"
                href="#"
                onClick={[Function]}
              >
                Docker
              </a>
               to run pipelines reliably on various operating systems.
            </small>
          </p>
          <div
            className="align-self-center"
          >
            <button
              className="mr-2 btn btn-outline-warning"
              onClick={[Function]}
              type="button"
            >
              Start Docker
            </button>
            <button
              className="btn btn-warning"
              onClick={[Function]}
              type="button"
            >
              Retry
            </button>
          </div>
        </div>
      </div>
      <div
        className="jumbotron"
      >
        <h1
          className="display-4"
        >
          There is 
          <em>
            knothing
          </em>
           here yet.
        </h1>
        <p
          className="lead"
        >
          KNOTS allows you to set up simple data pipelines leveraging
           
          <a
            href="#"
            onClick={[Function]}
          >
            Singer
          </a>
           open-source technology.
        </p>
        <a
          href="/taps"
          onClick={[Function]}
        >
          <button
            className="mt-3 btn btn-primary disabled"
            disabled={true}
            onClick={[Function]}
            type={undefined}
          >
            Get Started
          </button>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Home component Disables knot actions when Docker is not installed 1`] = `
<div
  className="container"
>
  <p
    className="h2 mb-3 clearfix"
  >
    Saved knots
    <a
      href="/taps"
      onClick={[Function]}
    >
      <button
        className="float-right btn btn-outline-secondary btn-sm disabled"
        disabled={true}
        onClick={[Function]}
        type={undefined}
      >
        New knot
      </button>
    </a>
  </p>
  <table
    className="table"
  >
    <thead
      className="thead-light"
    >
      <tr>
        <th
          className="text-center pr-0"
          style={
            Object {
              "width": "6em",
            }
          }
        >
          Tap
        </th>
        <th
          className="px-0 fit"
        />
        <th
          className="text-center pl-0"
          style={
            Object {
              "width": "6em",
            }
          }
        >
          Target
        </th>
        <th>
          Name
        </th>
        <th>
          Last Run
        </th>
        <th
          className="fit"
        >
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="align-middle text-center pr-0"
        >
          <img
            alt="tap-redshift logo"
            className="logo"
            src="redshift"
          />
        </td>
        <td
          className="align-middle px-0 text-muted text-center"
        >
          <span
            className="oi oi-chevron-right"
          />
        </td>
        <td
          className="align-middle text-center pr-0"
        >
          <img
            alt="target-datadotworld logo"
            className="logo"
            src="datadotworld"
          />
        </td>
        <th
          className="align-middle"
        >
          knot1
        </th>
        <td
          className="align-middle"
        >
          a few seconds ago
        </td>
        <td
          className="fit align-middle"
        >
          <div
            className="btn-group"
            role="group"
          >
            <button
              className="btn btn-link btn btn-link disabled"
              data-placement="top"
              data-toggle="tooltip"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Sync new data"
              type="button"
            >
              <span
                className="oi oi-media-play"
              />
            </button>
            <button
              className="btn btn-link-secondary btn btn-link-secondary disabled"
              data-placement="top"
              data-toggle="tooltip"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Sync all data"
              type="button"
            >
              <span
                className="oi oi-reload"
              />
            </button>
            <button
              className="btn btn-link-secondary disabled"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Edit"
              type="button"
            >
              <span
                className="oi oi-pencil"
              />
            </button>
            <button
              className="btn btn-link-secondary"
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Export"
              type="button"
            >
              <span
                className="oi oi-cloud-download"
              />
            </button>
            <button
              className="btn btn-link-secondary"
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Delete"
              type="button"
            >
              <span
                className="oi oi-trash"
              />
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td
          className="align-middle text-center pr-0"
        >
          <img
            alt="tap-salesforce logo"
            className="logo"
            src="salesforce"
          />
        </td>
        <td
          className="align-middle px-0 text-muted text-center"
        >
          <span
            className="oi oi-chevron-right"
          />
        </td>
        <td
          className="align-middle text-center pr-0"
        >
          <img
            alt="target-stitch logo"
            className="logo"
            src="stitch"
          />
        </td>
        <th
          className="align-middle"
        >
          knot2
        </th>
        <td
          className="align-middle"
        >
          a few seconds ago
        </td>
        <td
          className="fit align-middle"
        >
          <div
            className="btn-group"
            role="group"
          >
            <button
              className="btn btn-link btn btn-link disabled"
              data-placement="top"
              data-toggle="tooltip"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Sync new data"
              type="button"
            >
              <span
                className="oi oi-media-play"
              />
            </button>
            <button
              className="btn btn-link-secondary btn btn-link-secondary disabled"
              data-placement="top"
              data-toggle="tooltip"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Sync all data"
              type="button"
            >
              <span
                className="oi oi-reload"
              />
            </button>
            <button
              className="btn btn-link-secondary disabled"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Edit"
              type="button"
            >
              <span
                className="oi oi-pencil"
              />
            </button>
            <button
              className="btn btn-link-secondary"
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Export"
              type="button"
            >
              <span
                className="oi oi-cloud-download"
              />
            </button>
            <button
              className="btn btn-link-secondary"
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Delete"
              type="button"
            >
              <span
                className="oi oi-trash"
              />
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Home component Disables knot actions when Docker is not running 1`] = `
<div
  className="container"
>
  <p
    className="h2 mb-3 clearfix"
  >
    Saved knots
    <a
      href="/taps"
      onClick={[Function]}
    >
      <button
        className="float-right btn btn-outline-secondary btn-sm disabled"
        disabled={true}
        onClick={[Function]}
        type={undefined}
      >
        New knot
      </button>
    </a>
  </p>
  <table
    className="table"
  >
    <thead
      className="thead-light"
    >
      <tr>
        <th
          className="text-center pr-0"
          style={
            Object {
              "width": "6em",
            }
          }
        >
          Tap
        </th>
        <th
          className="px-0 fit"
        />
        <th
          className="text-center pl-0"
          style={
            Object {
              "width": "6em",
            }
          }
        >
          Target
        </th>
        <th>
          Name
        </th>
        <th>
          Last Run
        </th>
        <th
          className="fit"
        >
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="align-middle text-center pr-0"
        >
          <img
            alt="tap-redshift logo"
            className="logo"
            src="redshift"
          />
        </td>
        <td
          className="align-middle px-0 text-muted text-center"
        >
          <span
            className="oi oi-chevron-right"
          />
        </td>
        <td
          className="align-middle text-center pr-0"
        >
          <img
            alt="target-datadotworld logo"
            className="logo"
            src="datadotworld"
          />
        </td>
        <th
          className="align-middle"
        >
          knot1
        </th>
        <td
          className="align-middle"
        >
          a few seconds ago
        </td>
        <td
          className="fit align-middle"
        >
          <div
            className="btn-group"
            role="group"
          >
            <button
              className="btn btn-link btn btn-link disabled"
              data-placement="top"
              data-toggle="tooltip"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Sync new data"
              type="button"
            >
              <span
                className="oi oi-media-play"
              />
            </button>
            <button
              className="btn btn-link-secondary btn btn-link-secondary disabled"
              data-placement="top"
              data-toggle="tooltip"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Sync all data"
              type="button"
            >
              <span
                className="oi oi-reload"
              />
            </button>
            <button
              className="btn btn-link-secondary disabled"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Edit"
              type="button"
            >
              <span
                className="oi oi-pencil"
              />
            </button>
            <button
              className="btn btn-link-secondary"
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Export"
              type="button"
            >
              <span
                className="oi oi-cloud-download"
              />
            </button>
            <button
              className="btn btn-link-secondary"
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Delete"
              type="button"
            >
              <span
                className="oi oi-trash"
              />
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td
          className="align-middle text-center pr-0"
        >
          <img
            alt="tap-salesforce logo"
            className="logo"
            src="salesforce"
          />
        </td>
        <td
          className="align-middle px-0 text-muted text-center"
        >
          <span
            className="oi oi-chevron-right"
          />
        </td>
        <td
          className="align-middle text-center pr-0"
        >
          <img
            alt="target-stitch logo"
            className="logo"
            src="stitch"
          />
        </td>
        <th
          className="align-middle"
        >
          knot2
        </th>
        <td
          className="align-middle"
        >
          a few seconds ago
        </td>
        <td
          className="fit align-middle"
        >
          <div
            className="btn-group"
            role="group"
          >
            <button
              className="btn btn-link btn btn-link disabled"
              data-placement="top"
              data-toggle="tooltip"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Sync new data"
              type="button"
            >
              <span
                className="oi oi-media-play"
              />
            </button>
            <button
              className="btn btn-link-secondary btn btn-link-secondary disabled"
              data-placement="top"
              data-toggle="tooltip"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Sync all data"
              type="button"
            >
              <span
                className="oi oi-reload"
              />
            </button>
            <button
              className="btn btn-link-secondary disabled"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Edit"
              type="button"
            >
              <span
                className="oi oi-pencil"
              />
            </button>
            <button
              className="btn btn-link-secondary"
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Export"
              type="button"
            >
              <span
                className="oi oi-cloud-download"
              />
            </button>
            <button
              className="btn btn-link-secondary"
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Delete"
              type="button"
            >
              <span
                className="oi oi-trash"
              />
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Home component Shows jumbotron when there are no saved knots 1`] = `
<div>
  <nav
    className="mb-5 navbar navbar-dark bg-dark"
  >
    <div
      className="container"
    >
      <a
        className="navbar-brand"
        href="#/"
      >
        <img
          alt="KNOTS logo"
          height={40}
          src="test-file-stub"
          width={40}
        />
      </a>
      <ul
        className="navbar-nav nav-pills"
      >
        <li
          className="nav-item"
        >
          <a
            aria-current="page"
            className="nav-link d-none"
            href="/"
            onClick={[Function]}
            style={Object {}}
          >
            Back to saved knots
          </a>
        </li>
      </ul>
    </div>
  </nav>
  <div
    className="mt-5 container"
  >
    <div>
      <div
        className="jumbotron"
      >
        <h1
          className="display-4"
        >
          There is 
          <em>
            knothing
          </em>
           here yet.
        </h1>
        <p
          className="lead"
        >
          KNOTS allows you to set up simple data pipelines leveraging
           
          <a
            href="#"
            onClick={[Function]}
          >
            Singer
          </a>
           open-source technology.
        </p>
        <a
          href="/taps"
          onClick={[Function]}
        >
          <button
            className="mt-3 btn btn-primary"
            disabled={false}
            onClick={[Function]}
            type={undefined}
          >
            Get Started
          </button>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Home component Shows saved knots 1`] = `
<div
  className="container"
>
  <p
    className="h2 mb-3 clearfix"
  >
    Saved knots
    <a
      href="/taps"
      onClick={[Function]}
    >
      <button
        className="float-right btn btn-outline-secondary btn-sm"
        disabled={false}
        onClick={[Function]}
        type={undefined}
      >
        New knot
      </button>
    </a>
  </p>
  <table
    className="table"
  >
    <thead
      className="thead-light"
    >
      <tr>
        <th
          className="text-center pr-0"
          style={
            Object {
              "width": "6em",
            }
          }
        >
          Tap
        </th>
        <th
          className="px-0 fit"
        />
        <th
          className="text-center pl-0"
          style={
            Object {
              "width": "6em",
            }
          }
        >
          Target
        </th>
        <th>
          Name
        </th>
        <th>
          Last Run
        </th>
        <th
          className="fit"
        >
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="align-middle text-center pr-0"
        >
          <img
            alt="tap-redshift logo"
            className="logo"
            src="redshift"
          />
        </td>
        <td
          className="align-middle px-0 text-muted text-center"
        >
          <span
            className="oi oi-chevron-right"
          />
        </td>
        <td
          className="align-middle text-center pr-0"
        >
          <img
            alt="target-datadotworld logo"
            className="logo"
            src="datadotworld"
          />
        </td>
        <th
          className="align-middle"
        >
          knot1
        </th>
        <td
          className="align-middle"
        >
          a few seconds ago
        </td>
        <td
          className="fit align-middle"
        >
          <div
            className="btn-group"
            role="group"
          >
            <button
              className="btn btn-link btn btn-link"
              data-placement="top"
              data-toggle="tooltip"
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Sync new data"
              type="button"
            >
              <span
                className="oi oi-media-play"
              />
            </button>
            <button
              className="btn btn-link-secondary btn btn-link-secondary"
              data-placement="top"
              data-toggle="tooltip"
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Sync all data"
              type="button"
            >
              <span
                className="oi oi-reload"
              />
            </button>
            <button
              className="btn btn-link-secondary"
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Edit"
              type="button"
            >
              <span
                className="oi oi-pencil"
              />
            </button>
            <button
              className="btn btn-link-secondary"
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Export"
              type="button"
            >
              <span
                className="oi oi-cloud-download"
              />
            </button>
            <button
              className="btn btn-link-secondary"
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Delete"
              type="button"
            >
              <span
                className="oi oi-trash"
              />
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td
          className="align-middle text-center pr-0"
        >
          <img
            alt="tap-salesforce logo"
            className="logo"
            src="salesforce"
          />
        </td>
        <td
          className="align-middle px-0 text-muted text-center"
        >
          <span
            className="oi oi-chevron-right"
          />
        </td>
        <td
          className="align-middle text-center pr-0"
        >
          <img
            alt="target-stitch logo"
            className="logo"
            src="stitch"
          />
        </td>
        <th
          className="align-middle"
        >
          knot2
        </th>
        <td
          className="align-middle"
        >
          a few seconds ago
        </td>
        <td
          className="fit align-middle"
        >
          <div
            className="btn-group"
            role="group"
          >
            <button
              className="btn btn-link btn btn-link"
              data-placement="top"
              data-toggle="tooltip"
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Sync new data"
              type="button"
            >
              <span
                className="oi oi-media-play"
              />
            </button>
            <button
              className="btn btn-link-secondary btn btn-link-secondary"
              data-placement="top"
              data-toggle="tooltip"
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Sync all data"
              type="button"
            >
              <span
                className="oi oi-reload"
              />
            </button>
            <button
              className="btn btn-link-secondary"
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Edit"
              type="button"
            >
              <span
                className="oi oi-pencil"
              />
            </button>
            <button
              className="btn btn-link-secondary"
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Export"
              type="button"
            >
              <span
                className="oi oi-cloud-download"
              />
            </button>
            <button
              className="btn btn-link-secondary"
              onClick={[Function]}
              style={
                Object {
                  "background": "white",
                }
              }
              title="Delete"
              type="button"
            >
              <span
                className="oi oi-trash"
              />
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
